[gd_scene load_steps=4 format=3 uid="uid://bw25vdlboyrf4"]

[ext_resource type="Script" uid="uid://ifdcnbc7x80x" path="res://scenes/projectiles/laser.gd" id="1_e6ads"]
[ext_resource type="Texture2D" uid="uid://7mf6mo7d3kbr" path="res://graphics/projectiles/blue.png" id="1_rlgyd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e6ads"]
radius = 7.0
height = 122.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_e6ads")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 22)
texture = ExtResource("1_rlgyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_e6ads")

[node name="LaserDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserDuration" to="." method="_on_laser_duration_timeout"]
